Fixed background image on hero not covering on small images

--- a/includes/assets/css/gpnl-hero.css
+++ b/includes/assets/css/gpnl-hero.css
@@ -3,3 +3,7 @@
 	display: none;
 
 }
+
+.hero{
+	background-size: cover;
+}
